adjustments for card variants & xp sacrificing
